// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptiveSpan Component should apply general styling correctly 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "<b>Foobar</b>",
    }
  }
  title="Foobar"
/>
`;

exports[`AdaptiveSpan Component should apply general styling correctly 2`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "<i>Foobar</i>",
    }
  }
  title="Foobar"
/>
`;

exports[`AdaptiveSpan Component should have a title when showTitle is true 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "Foobar",
    }
  }
  title="Foobar"
/>
`;

exports[`AdaptiveSpan Component should renders 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "Foobar",
    }
  }
/>
`;

exports[`AdaptiveSpan Component should still render if a mapped value is forced to undefined 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "<u>Foobar is foobar and void is </u>",
    }
  }
  title="<u>Foobar is foobar and void is </u>"
/>
`;
